fixed position of snackbar stack on mobile screens

--- a/Source/Extensions/Blazorise.Snackbar/Styles/blazorise.snackbar.scss
+++ b/Source/Extensions/Blazorise.Snackbar/Styles/blazorise.snackbar.scss
@@ -393,3 +393,11 @@ $snackbar-padding-y-multi: 1.25rem !default;
         top: $spacer-lg;
     }
 }
+
+@media (max-width: $mobile) {
+    .snackbar-stack{
+        right: 0;
+        left: 0;
+    }
+}
+
